# Flexi-Desk

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: json_extractor.rs  mod.rs  provider.rs
src-tauri/src/auth/: mod.rs  oauth_callback_apple.html  oauth_callback_google.html
src-tauri/src/caption/: audio.rs  mod.rs  sidecar.rs  types.rs  whisper.rs  whisper_installer.rs
src-tauri/src/commands/: ai.rs  caption.rs  dashboard.rs  database.rs  deck_hub.rs  exam.rs  export.rs  jobs.rs  mod.rs  ollama.rs  plugins.rs  podcast.rs  pronunciation.rs  reading.rs  settings.rs  shortcuts.rs  sidecar.rs  srs.rs  sync.rs  tutor.rs  vocabulary.rs  writing.rs
src-tauri/src/dashboard/: analytics.rs  mod.rs  streaks.rs  types.rs  xp.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/deck_hub/: mod.rs  ocr.rs  prompts.rs  types.rs
src-tauri/src/exam/: types.rs
src-tauri/src/export/: anki.rs  csv_handler.rs  mod.rs  types.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/ollama/: client.rs  installer.rs  mod.rs  types.rs
src-tauri/src/plugins/: manager.rs  manifest.rs  mod.rs  types.rs
src-tauri/src/podcast/: mod.rs  nlp.rs  rss.rs  types.rs
src-tauri/src/pronunciation/: analysis.rs  mod.rs  types.rs
src-tauri/src/shortcuts/: defaults.rs  mod.rs  types.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/srs/: fsrs.rs  (+5 more)
(+276 files in other folders)
