[package]
name = "flexi-desk"
version = "0.5.0"
description = "FlexiDesk - Desktop companion for FlexiLingo"
authors = ["you"]
edition = "2021"

[lib]
name = "flexi_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["fs", "process", "sync", "time", "rt", "io-util", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1"
cpal = "0.15"
hound = "3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
urlencoding = "2"
csv = "1.3"
zip = { version = "2", features = ["deflate"] }
tempfile = "3"
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
